# sqlite2orm

./: .gitignore  CMakeLists.txt  COVERAGE.md  LICENSE  PLAN.md  README.md
.cursor/rules/: cpp-style.mdc
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/01_basic_select/: CMakeLists.txt  main.cpp
examples/02_create_table/: CMakeLists.txt  main.cpp
examples/03_programmatic_api/: CMakeLists.txt  main.cpp
examples/04_custom_policy/: CMakeLists.txt  main.cpp
examples/05_sqlite_file_import/: CMakeLists.txt  main.cpp
examples/06_json_output/: CMakeLists.txt  main.cpp
include/sqlite2orm/: ast.h  ast_base.h  ast_ddl.h  ast_expr.h  ast_query.h  codegen.h  codegen_policy.h  codegen_result.h  error.h  json_emit.h  parser.h  pragma_sqlite_orm.h  process.h  schema_header.h  schema_process.h  schema_reader.h  token.h  token_stream.h  tokenizer.h  utils.h  validator.h
src/: ast.cpp  cli_main.cpp  codegen.cpp  codegen_context.cpp  codegen_context.h  codegen_ddl.cpp  codegen_ddl.h  codegen_dml.cpp  codegen_dml.h  codegen_expression.cpp  codegen_expression.h  codegen_pragma.cpp  codegen_pragma.h  codegen_select.cpp  codegen_select.h  codegen_utils.cpp  codegen_utils.h  codegen_with.cpp  codegen_with.h  json_emit.cpp  parser.cpp  parser_ddl.cpp  parser_ddl.h  parser_dml.cpp  parser_dml.h  parser_expression.cpp  parser_expression.h  parser_select.cpp  parser_select.h  pragma_sqlite_orm.cpp  process.cpp  schema_header.cpp  schema_process.cpp  schema_reader.cpp  token_stream.cpp  tokenizer.cpp  utils.cpp  validator.cpp
tests/: codegen_tests_common.cpp  codegen_tests_common.hpp  codegen_tests_create_table.cpp  codegen_tests_dml.cpp  codegen_tests_expressions.cpp  codegen_tests_pragma.cpp  codegen_tests_select.cpp  codegen_tests_virtual_table.cpp  codegen_tests_with.cpp  parser_tests_common.cpp  parser_tests_common.hpp  parser_tests_compound.cpp  parser_tests_create_table.cpp  parser_tests_create_view.cpp  parser_tests_dml.cpp  parser_tests_expressions.cpp  parser_tests_from_derived.cpp  parser_tests_index.cpp  parser_tests_misc_statements.cpp  parser_tests_select.cpp  parser_tests_subquery.cpp  parser_tests_trigger.cpp  parser_tests_upsert.cpp  parser_tests_virtual_table.cpp  parser_tests_with.cpp  process_tests.cpp  schema_pipeline_tests.cpp  schema_reader_tests.cpp  tokenizer_tests.cpp  validator_tests.cpp
tests/cli_fixtures/: one_table.sql
